# NyxCore

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.txt  migrate_sqlite_to_postgres.load  pyproject.toml  requirements-postgresql.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
scripts/: build_deb.sh  build_msi.sh
src/client/: main.py
src/client/services/: api.py  workers.py
src/client/ui/: auth_dialog.py  main_window.py  report_dialog.py  server_dialog.py
src/client/utils/: hardware.py  session.py
src/server/: main.py
src/server/core/: config.py  database.py  security.py
src/server/middleware/: rate_limit.py  security.py
src/server/models/: __init__.py  admin_log.py  hub.py  iso_chunk.py  license.py  machine.py  report.py  token.py  upload.py  user.py
src/server/routers/: __init__.py  admin.py  auth.py  health.py  hub.py  isos.py  licenses.py  machines.py
src/server/services/: iso_storage.py  schemas.py  schemas_auth.py
src/server/templates/admin/: base.html  dashboard.html  isos.html  licenses.html  login.html  machines.html  reports.html  users.html
src/server/templates/hub/: index.html  stats.html
tests/server/: test_api.py
