[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyxcore"
version = "1.1.0"
description = "ISO/OS HUB platform with licenses, users, machines, and secure API"
authors = [{ name = "yolezz" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",

    "sqlalchemy>=2.0,<3.0",
    "greenlet>=3.0",

    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "typing-extensions>=4.12",

    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",

    "python-multipart>=0.0.12",
    "aiofiles>=24.1,<25.0",
    "python-dotenv>=1.0,<2.0",

    "httpx>=0.27,<1.0",
    "requests>=2.32,<3.0",

    "jinja2>=3.1,<4.0",
    "psutil>=6.1,<7.0",

    "orjson>=3.10,<4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<1.0",
    "httpx>=0.27,<1.0"
]

build = [
    "nuitka>=2.5,<3.0"
]

[project.scripts]
nyxcore-server = "src.server.main:run"
nyxcore-client = "src.client.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]